--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
   <section class="section buttons">
     <h2>🔗 Connect With Us</h2>
     <a href="https://t.me/kaizzzen2856" target="_blank">📱 Telegram</a>
-    <a href="https://t.me/kaizen2856" target="_blank">📢 Channel</a>
-    <a href="https://t.me/kaizenframez" target="_blank">💬 Discussion</a>
+    <a href="https://t.me/kaizzenfrmz" target="_blank">📢 Channel</a>
+    <a href="https://t.me/kaizzzenfrmz" target="_blank">💬 Discussion</a>
     <a href="https://www.instagram.com/kaizen.framez?igsh=angycjViZHVqNjhu" target="_blank">📸 Instagram</a>
   </section>
 
